--- a/less/konnun/mobile.less
+++ b/less/konnun/mobile.less
@@ -1,6 +1,6 @@
 /*	Vísar - Konnun - mobile.less
 ========================================= */
 
-	#survey-form h1 		{ font-size: 1.5em; line-height: 1em; margin-bottom: 18px; letter-spacing: -2px; }
+	#survey-form h1 		{ font-size: 1.5em; line-height: 1em; margin-bottom: 18px; }
 	footer .logo 			{ width: 156px; height: 42px; margin-right: auto; margin-left: auto; float: none; }
 	#survey-form textarea 	{ width: 266px; margin: 0 auto; }
